--- a/MVVM/Storyboards/Profile.storyboard
+++ b/MVVM/Storyboards/Profile.storyboard
@@ -11,13 +11,13 @@
         <!--Profile View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="ProfileViewController" id="Y6W-OH-hqX" customClass="ProfileViewController" customModule="MVVM" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileViewController" modalPresentationStyle="fullScreen" id="Y6W-OH-hqX" customClass="ProfileViewController" customModule="MVVM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AYo-HH-stJ">
-                                <rect key="frame" x="0.0" y="59" width="393" height="275"/>
+                                <rect key="frame" x="0.0" y="83" width="393" height="275"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="FM2-7C-DPj">
                                         <rect key="frame" x="166.66666666666666" y="31" width="60" height="58.666666666666671"/>
@@ -65,13 +65,15 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="AYo-HH-stJ" secondAttribute="trailing" id="T1p-eI-lxd"/>
                             <constraint firstItem="AYo-HH-stJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="okk-47-oa0"/>
-                            <constraint firstItem="AYo-HH-stJ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="wCZ-xH-meE"/>
+                            <constraint firstItem="AYo-HH-stJ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="24" id="wCZ-xH-meE"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <nil key="simulatedTopBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
